Bug 126592 - Special Characters Can't be inserted by Using the Toolbar Icon in OLE Objects
Summary: Special Characters Can't be inserted by Using the Toolbar Icon in OLE Objects
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.5.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: OLE-Objects
  Show dependency treegraph
 
Reported: 2019-07-29 10:26 UTC by Harald Koester
Modified: 2019-08-06 03:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2019-07-29 10:26:47 UTC
In order to reproduce the bug:

[1] Create new text document.
[2] Insert OLE object: 
   (a) Insert > Object > OLE Object… 
   (b) Select “Create new” > Object Type: LibreOffice 6.2 Drawing > OK
[3] Insert text box in drawing object.
[4] Insert special character into text box with respective icon in toolbar Standard. Nothing happens. Expected: Insertion of the special character.

Insertion of special characters is possible with menu: Insert > Special Character… > ...

Insertion of special characters is also not possible in other OLE objects like spreadsheets, presentations and text documents.

The bug first occurs with version 6.0.0. In order to test the bug with older versions you have to add the icon “Symbol” or “Special character” to a Draw toolbar with the Customize function.
Comment 1 Jacques Guilleron 2019-07-29 14:55:36 UTC
Hi Halrald,

I confirm your constat.
Insertion of Special Charater is impossible with your test conditions since
LO 6.0.0.0.beta1 Build ID: 97471ab4eb4db4c487195658631696bb3238656c
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-GB (fr_FR); Calc: CL
but is available again since
LO  6.3.0.0.beta1 (x86) Build ID: a187af327633f5f00363be5131bd21a13e0f1a7b
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; VCL: win; 
Locale : fr-FR (fr_FR); Langue IHM : fr-FR Calc: CL.
Sherefore,I'm not sure this will be modified.
What do you think?

Jacques.
Comment 2 Harald Koester 2019-07-29 19:40:43 UTC
Hi Jacques,

thanks for testing. I will check this bug again with version 6.3.0 when it is released in some days.

Best Harald
Comment 3 QA Administrators 2019-07-30 03:20:14 UTC Comment hidden (obsolete)
Comment 4 Heiko Tietze 2019-07-30 07:38:39 UTC
Confirming with master/6.4. You cannot insert special characters into any OLE object.

@Jim, is that something you would be interested in?
Comment 5 Jim Raykowski 2019-08-02 08:05:21 UTC
Yes I am interested. Thank you for asking.

Here is a patch:
https://gerrit.libreoffice.org/#/c/76835/
Comment 6 Commit Notification 2019-08-05 20:35:45 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6311bcff7fcef64fbeff482b820671e62faf5ba4%5E%21

tdf#126592 Make special characters insert in OLE objects

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.