tdf#126592 Make special characters insert in OLE objects

Change-Id: I1b7def6487e98abc9aba964d86be24708eb927cb